--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Index</title>
 </head>
 <body>
-    
+    <header>
+
+    </header>
+
+    <body>
+        
+    </body>
+
+    <footer></footer>
 </body>
 </html>
