Criação do html da página inscricao

--- a/inscricao.html
+++ b/inscricao.html
@@ -14,7 +14,25 @@
     </head>
 
     <main>
+        <section>
+            <div id="Formulario">
+                <form action="">
+                    <label for="">Nome completo:</label>
+                    <input type="text">
 
+                    <label for="">Email:</label>
+                    <input type="email" name="" id="">
+
+                    <label for="">Celular:</label>
+                    <input type="tel" name="" id="">
+
+                    <label for="">CPF:</label>
+                    <input type="number" name="" id="">
+
+                    <button type="submit">ENVIAR</button>
+                </form>
+            </div>
+        </section>
     </main>
 
     <footer>
