anexando barra de navegação

--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
 </head>
 <body>
     <header>
-        <h1></h1>
-        <h1></h1>
+        <h1> Front-End Summit 2025</h1>
+
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="inscricao.html">Inscrição</a>
+            <a href="programação">Programção</a>
+            <a href="sobre">sobre</a>
+        </nav>
+        
     </header>
 
     <body>
