--- a/inscricao.html
+++ b/inscricao.html
@@ -11,9 +11,16 @@
 
 <body>
 
-    <head>
+    <header>
+        <h1> Front-end Summir</h1>
 
-    </head>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="inscricao.html">inscrição</a>
+            <a href="programacao.html">Programção</a>
+        </nav>
+
+    </header>
 
     <main>
         <section>
